@@ -95,6 +95,9 @@
 [seaking_server_1.0.0.1 2013-10-26 张春生]
 1、新功能：增加升级提示
 
+[seaking_server_1.0.0.1 2013-10-29 张春生]
+1、新功能：增加消息系统
+
 --备注分类
 1、新功能：
 2、Bug:
